posiGen_FullsendBox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Ambassador__Ambassador_Custom_Label_1__c</fullName>
        <label>Ambassador Custom Label #1</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Custom_Label_2__c</fullName>
        <label>Ambassador Custom Label #2</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Custom_Label_3__c</fullName>
        <label>Ambassador Custom Label #3</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ambassador ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referral_Memorable_URL__c</fullName>
        <label>Ambassador Referral Memorable URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Create_Ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create As Ambassador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Referred Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Remote_Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Remote Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambassador__Short_Code__c</fullName>
        <label>Referring Short Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPI_Certification__c</fullName>
        <description>BPI certification. Will need to be updates as certifications change</description>
        <inlineHelpText>Select each of the BPI certifications</inlineHelpText>
        <label>BPI Certification</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Home Energy Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air conditioning and Heat Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBE controller installer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Related To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts Related To</relationshipLabel>
        <relationshipName>Contacts_Related_To_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check for people that work for the EE department</inlineHelpText>
        <label>EE contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Contact_Name__c</fullName>
        <label>Employer Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Asst_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Assistants Phone</description>
        <formula>IF( 
        LEN( AssistantPhone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(AssistantPhone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   AssistantPhone , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Assistants Phone</inlineHelpText>
        <label>NVM Asst. Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Home_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Home Phone</description>
        <formula>IF( 
        LEN( HomePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(HomePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   HomePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Home Phone</inlineHelpText>
        <label>NVM Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Other_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Other Phone</description>
        <formula>IF( 
        LEN( OtherPhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(OtherPhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   OtherPhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Other Phone</inlineHelpText>
        <label>NVM Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Contact&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Created For</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CoOwners and References</relationshipLabel>
        <relationshipName>Contacts_Created_As_Coowner_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>What position does the contact hold within a company? Designed for business contacts</description>
        <inlineHelpText>Enter the most fitting position for the contact.</inlineHelpText>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crew Chief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal sub</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RESNET_Certifications__c</fullName>
        <description>Add any RESNET certifications as they become available.</description>
        <inlineHelpText>Enter any RESNET certifications</inlineHelpText>
        <label>RESNET Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>HERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnergySmart</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verification_Failure_Reasons__c</fullName>
        <label>Verification Failure Reasons</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emma__Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that there was a problem sending mail to this contact.</inlineHelpText>
        <label>Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>emma__Emma_Member_ID__c</fullName>
        <description>Unique ID of member in the Emma system.</description>
        <label>Emma Member ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emma__Test_Field__c</fullName>
        <label>Test Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Business_Contact</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Business_Contact</value>
        </filters>
        <label>Business Contact</label>
    </listViews>
    <listViews>
        <fullName>Greener_Dawn</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Greener Dawn</label>
        <sharedTo>
            <group>Telemarketer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Contact</fullName>
        <active>true</active>
        <description>These are Contacts that work for Company/Entity in our system.  This includes vendor contacts, installer contacts, etc.</description>
        <label>Business Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportuntiy_Contact</fullName>
        <active>true</active>
        <description>This Contact record is to capture the Information of Co-Owners, References, and other People related to a Sales Opportunity</description>
        <label>Opportuntiy Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChannelPartner_ContactMobilePhone</fullName>
        <active>false</active>
        <description>Ensure that the Organic Invasion channel partner profile can create but not change Mobile Phone field values.</description>
        <errorConditionFormula>AND(
    $Profile.Name = &quot;Channel Partner&quot;,
    ISCHANGED( MobilePhone ),
    NOT ISBLANK(PRIORVALUE(MobilePhone ))
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile Phone is not editable.</errorMessage>
    </validationRules>
</CustomObject>